# ros2-groundgrid

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
docs/: parameters.md
groundgrid/: CMakeLists.txt  package.xml
groundgrid/config/: groundgrid.param.yaml
groundgrid/include/groundgrid/: config.hpp  forward.hpp  groundgrid.hpp  groundgrid_node.hpp  point_types.hpp  segmentation.hpp
groundgrid/launch/: groundgrid.launch.xml
groundgrid/rviz/: groundgrid.rviz
groundgrid/src/: config.cpp  groundgrid.cpp  groundgrid_node.cpp  segmentation.cpp
rviz/: groundgrid.rviz
scripts/: kitti2bag.py
